--- a/src/styles/homework2.css
+++ b/src/styles/homework2.css
@@ -22,7 +22,7 @@
 }
 
 .user{
-    width: 25%;
+    width: 19%;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
@@ -55,4 +55,35 @@
 
 .notdisplay{
     display: none;
+}
+
+
+.launches{
+    margin-top: 20px;
+    color: white;
+    background: #5b4747;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    font-size: 8px;
+}
+
+.launch{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: #323336;
+    border-radius: 10px;
+    width: 20%;
+    height: 20%;
+}
+
+.launch > img{
+
+    width: 20%;
+    height: 20%;
 }
